# Get_papers_list

./: README.md  output.csv  pyproject.toml  specific_output.csv  test_output.csv
get_papers_list/: fetcher.py  main.py  parser.py  utils.py
