[project]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = [
    {name = "bhargavi2514",email = "bhargavireddyseelam54@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "get_papers_list.main:main"
